--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/relashe/relashing#readme",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@storybook/addon-knobs": "^5.3.4",
+    "@storybook/addons": "^5.3.4",
     "@storybook/react": "^5.2.8",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
