--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
-    "foundation-sites": "^6.6.1",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.1",
@@ -36,6 +35,7 @@
   },
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "foundation-sites": "^6.6.1",
   }
 }
