--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "foundation-sites": "^6.6.1",
+    "foundation-sites": "^6.6.1"
   }
 }
