--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "classnames": "2.2.6",
+    "prop-types": "15.7.2",
     "foundation-sites": "^6.6.1"
   }
 }
