--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "relashing",
   "version": "1.0.0",
   "description": "branding styles",
-  "main": "index.js",
+  "main": "src/index.js",
+  "module": "dist/lib.es.js",
   "scripts": {
     "test": "test",
     "start": "start-storybook -s ./public -p 9009",
@@ -21,6 +22,8 @@
   "homepage": "https://github.com/relashe/relashing#readme",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@storybook/addon-knobs": "^5.3.4",
     "@storybook/addons": "^5.3.4",
     "@storybook/react": "^5.2.8",
@@ -31,8 +34,6 @@
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.1",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.1",
     "rimraf": "2.6.3",
     "rollup": "^1.16.6",
     "rollup-plugin-babel": "^4.3.3",
@@ -40,7 +41,9 @@
     "rollup-plugin-postcss": "2.0.3",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-react-svg": "^3.0.3",
-    "rollup-plugin-visualizer": "^2.4.4"
+    "rollup-plugin-visualizer": "^2.4.4",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.1"
   },
   "dependencies": {
     "react": "^16.12.0",
@@ -48,5 +51,9 @@
     "classnames": "2.2.6",
     "prop-types": "15.7.2",
     "foundation-sites": "^6.6.1"
-  }
+  },
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ]
 }
