--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "style-loader": "^1.1.1"
   },
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "classnames": "2.2.6",
+    "foundation-sites": "^6.6.1",
+    "html-react-parser": "^0.10.0",
     "prop-types": "15.7.2",
-    "foundation-sites": "^6.6.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "sideEffects": [
     "*.css",
