--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.1",
     "rimraf": "2.6.3",
-    "rollup": "^1.16.6",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-postcss": "2.0.3",
-    "rollup-plugin-progress": "^1.1.1",
+    "rollup": "^2.52.8",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-react-svg": "^3.0.3",
-    "rollup-plugin-visualizer": "^2.4.4",
+    "rollup-plugin-visualizer": "^5.5.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.1"
   },
