--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
+    "html-react-parser": "^1.2.7",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.1",
