--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
-    "html-react-parser": "^1.2.7",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.1",
@@ -47,11 +46,12 @@
     "style-loader": "^1.1.1"
   },
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "classnames": "2.2.6",
+    "foundation-sites": "^6.6.1",
+    "html-react-parser": "^1.2.7",
     "prop-types": "15.7.2",
-    "foundation-sites": "^6.6.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "sideEffects": [
     "*.css",
